packages/keycloak/keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: keycloak
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: keycloak.timedevops.click
    argocd.argoproj.io/sync-wave: "25"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - keycloak.timedevops.click
    secretName: keycloak-tls
  rules:
  - host: keycloak.timedevops.click
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak-http
            port:
              number: 80
